Implement /velocity heap command